Update dockerfile
Revisit testing